--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "cxlt-vue2-toastr": "^1.1.0",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
+    "vee-validate": "^2.1.5",
     "vue": "^2.5.21",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
